fixes bugs on mobile

--- a/app/styles/sass/pages/_aboutme.sass
+++ b/app/styles/sass/pages/_aboutme.sass
@@ -1,5 +1,6 @@
 //About Section
-
+#about
+  overflow: hidden
 a.navbar-item
   font-family: 'Varela Round', sans-serif
   color: $dark-blue
