--- a/app/styles/sass/pages/_home.sass
+++ b/app/styles/sass/pages/_home.sass
@@ -1,5 +1,8 @@
 // Home Page Section
-
+html
+  position: relative
+  overflow-y: scroll
+  -webkit-overflow-scrolling: touch
 .home__section
   background: url('../images/home.jpg') center center / cover no-repeat
   position: relative
@@ -133,4 +136,5 @@
   60%
     transform: translateY(-5px)  
 
-    
+.columns
+  width: 100%
