--- a/app/styles/sass/pages/_works.sass
+++ b/app/styles/sass/pages/_works.sass
@@ -1,6 +1,7 @@
 .home__works-section
   margin-top: 80px
   margin-bottom: 80px
+  padding: 0 20px
   h2
     font-size: $size-1
     font-family: 'Varela Round', sans-serif
@@ -13,7 +14,7 @@
   display: flex
   align-items: center
   justify-content: space-between
-  padding: 20px
+  padding: 20px 5px
   .project_inprocess
     position: absolute
     top: 0
